# clang-misracpp2008

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.TXT  README.md
doc/: Doxyfile.in  RULES.txt  SUPPORT.txt
examples/OffendingProject/: CMakeLists.txt  main.cpp
src/: RuleHeadlineTexts.cpp  RuleHeadlineTexts.h  misracpp2008.cpp  misracpp2008.cpp.autosave  misracpp2008.h
src/rules/: BannedFunctionUsageChecker.h  Rule_10_3_2.cpp  Rule_10_3_2.h  Rule_10_3_3.cpp  Rule_10_3_3.h  Rule_11_0_1.cpp  Rule_12_8_2.cpp  Rule_15_5_1.cpp  Rule_16_3_1.cpp  Rule_16_3_2.cpp  Rule_17_0_1.cpp  Rule_17_0_5.cpp  Rule_18_0_1.cpp  Rule_18_0_2.cpp  Rule_18_0_3.cpp  Rule_18_0_4.cpp  Rule_18_0_5.cpp  Rule_18_2_1.cpp  Rule_18_4_1.cpp  Rule_18_7_1.cpp  Rule_19_3_1.cpp  Rule_27_0_1.cpp  Rule_2_10_1.cpp  Rule_2_10_2.cpp  Rule_2_13_3.cpp  Rule_2_13_4.cpp  Rule_2_13_5.cpp  Rule_3_1_2.cpp  Rule_3_1_3.cpp  Rule_3_3_1.cpp  Rule_3_3_2.cpp  Rule_3_4_1.cpp  Rule_3_9_1.cpp  Rule_3_9_2.cpp  Rule_4_10_2.cpp  Rule_4_5_1.cpp  Rule_4_5_2.cpp  Rule_4_5_3.cpp  Rule_5_0_5.cpp  Rule_5_14_1.cpp  (+9 more)
test/: 10-3-2.cpp  10-3-3.cpp  11-0-1.cpp  12-8-2.cpp  15-5-1.cpp  16-3-1.cpp  16-3-2.cpp  17-0-1.cpp  17-0-5.cpp  18-0-1.cpp  18-0-2.cpp  18-0-3.cpp  18-0-4.cpp  18-0-5.cpp  18-2-1.cpp  18-4-1.cpp  18-7-1.cpp  19-3-1.cpp  2-10-1.cpp  2-10-2.cpp  2-13-1.cpp  2-13-3.cpp  2-13-4.cpp  2-13-5.cpp  27-0-1.cpp  3-1-2.cpp  3-1-3.cpp  3-3-2.cpp  3-4-1.cpp  3-9-2.cpp  4-10-2.cpp  4-5-1.cpp  4-5-2.cpp  4-5-3.cpp  5-0-1.cpp  5-0-4.cpp  5-0-5.cpp  5-0-6.cpp  5-14-1.cpp  5-18-1.cpp  (+14 more)
test-wishlist/: 2-10-2-typedef-bug.cpp  2-13-5.cpp  3-1-1.cpp  3-1-1.h  3-9-1.cpp  5-0-1.cpp  5-8-1.cpp  6-2-2.cpp  README.md
test/10-3-2/: basic.cpp
test/10-3-3/: basic.cpp
test/2-13-3/: 2-13-3.cpp  2-13-3_short-enums.cpp
test/27-0-1/: basic.cpp
test/3-3-1/: 3-3-1.cpp  3-3-1.hpp
test/diag-level-downgrade/: 10-3-2-downgrade-to-remark.cpp  10-3-2-downgrade-to-warning.cpp  downgrade-to-remark.cpp  downgrade-to-warning.cpp
test/enable-and-disable-rules/: enable-10-3-2-and-disable-10-3-3.cpp  enable-rule-a-and-disable-rule-b.cpp  print-active-checks-nicely.cpp
test/exclude-path/: another-file.cpp  excluded-file.cpp
